k8s/car-ser-deployment-Recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: car-ser-deployment
  name: car-ser-deployment
  namespace: car-ser
spec:
  replicas: 4
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: car-ser-deployment
  template:
    metadata:
      labels:
        app: car-ser-deployment
      namespace: car-ser
    spec:
      containers:
        #- image: elroydevops/car-serv
        - image: nginx
          imagePullPolicy: Always
          name: car-ser
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
