k8s/car-ser-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-serv-ingress
  namespace: car-ser
spec:
  ingressClassName: nginx
  rules:
    - host: car-serv-cloud.devopsedu.vn
      http:
        paths:
          - backend:
              service:
                name: car-ser-service
                port:
                  number: 80
            path: /
            pathType: Prefix
# kubectl get ingress -n TenNamspace // lay ip Ingress
